--- a/ws.css
+++ b/ws.css
@@ -61,7 +61,7 @@ body {
   font-size: 1.4rem;
   cursor: pointer;
   transition: transform 0.25s, color 0.25s, background 0.3s;
-  padding: 6px 10px;
+  padding: 5px 5px;
   border-radius: 10px;
 }
 
@@ -81,6 +81,11 @@ body {
 .save-button:hover {
   background: rgba(0, 191, 255, 0.25);
   transform: scale(1.1);
+}
+
+.play-icon{
+  width: 35px;
+  height: 30px;
 }
 
 /* Popup styles */
